// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CanvasIntegrationForm when there is an existing integration it should render 1`] = `
<DocumentFragment>
  <form
    aria-label="Edit Canvas Integration"
    class="canvas-integration-form"
    name="Edit Canvas Integration"
  >
    <h2>
      Edit Canvas Integration
    </h2>
    <div
      class="input-container  inactive has-text undefined "
      role="button"
      tabindex="-1"
    >
      <label
        for="canvas-instance-url"
      >
        Canvas Instance URL
      </label>
      <input
        autocomplete="on"
        id="canvas-instance-url"
        maxlength="10000"
        type="url"
        value="https://quill.instructure.com"
      />
    </div>
    <div
      class="input-container  inactive has-text undefined "
      role="button"
      tabindex="-1"
    >
      <label
        for="client-id"
      >
        Client ID
      </label>
      <input
        autocomplete="on"
        id="client-id"
        maxlength="10000"
        value="1"
      />
    </div>
    <div
      class="input-container  inactive has-text undefined "
      role="button"
      tabindex="-1"
    >
      <label
        for="client-secret"
      >
        Client Secret
      </label>
      <input
        autocomplete="on"
        id="client-secret"
        maxlength="10000"
        value="secret"
      />
    </div>
    <table
      class="data-table undefined"
    >
      <thead>
        <tr
          class="data-table-headers"
        >
          <th
            class="data-table-header"
            scope="col"
          >
            <button
              class="quill-checkbox selected"
              type="button"
            >
              <img
                alt="Checked checkbox"
                src="https://assets.quill.org/images/shared/check-small-white.svg"
              />
            </button>
          </th>
          <th
            class="data-table-header name"
            scope="col"
            style="width: 356px; min-width: 356px; text-align: left;"
          >
            Schools
          </th>
        </tr>
      </thead>
      <tbody
        class="data-table-body"
      >
        <tr
          class="data-table-row checked "
        >
          <td>
            <button
              class="quill-checkbox selected data-table-row-section"
              type="button"
            >
              <img
                alt="check"
                src="https://assets.quill.org/images/shared/check-small-white.svg"
              />
            </button>
          </td>
          <td
            class="data-table-row-section name"
            style="width: 356px; min-width: 356px; text-align: left;"
          >
            <span />
            MLK Middle School
          </td>
        </tr>
        <tr
          class="data-table-row checked "
        >
          <td>
            <button
              class="quill-checkbox selected data-table-row-section"
              type="button"
            >
              <img
                alt="check"
                src="https://assets.quill.org/images/shared/check-small-white.svg"
              />
            </button>
          </td>
          <td
            class="data-table-row-section name"
            style="width: 356px; min-width: 356px; text-align: left;"
          >
            <span />
            Toni Morrison High School
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="button-wrapper"
    >
      <button
        class="quill-button contained primary medium focus-on-light red"
        type="button"
      >
        Delete
      </button>
      <div>
        <button
          class="quill-button medium outlined secondary focus-on-light"
          type="button"
        >
          Cancel
        </button>
        <button
          class="quill-button medium primary contained focus-on-light "
          type="submit"
        >
          Submit
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CanvasIntegrationForm when there is not an existing integration it should render 1`] = `
<DocumentFragment>
  <form
    aria-label="New Canvas Integration"
    class="canvas-integration-form"
    name="New Canvas Integration"
  >
    <h2>
      New Canvas Integration
    </h2>
    <div
      class="input-container  inactive  undefined "
      role="button"
      tabindex="-1"
    >
      <label
        for="canvas-instance-url"
      >
        Canvas Instance URL
      </label>
      <input
        autocomplete="on"
        id="canvas-instance-url"
        maxlength="10000"
        type="url"
        value=""
      />
    </div>
    <div
      class="input-container  inactive  undefined "
      role="button"
      tabindex="-1"
    >
      <label
        for="client-id"
      >
        Client ID
      </label>
      <input
        autocomplete="on"
        id="client-id"
        maxlength="10000"
        value=""
      />
    </div>
    <div
      class="input-container  inactive  undefined "
      role="button"
      tabindex="-1"
    >
      <label
        for="client-secret"
      >
        Client Secret
      </label>
      <input
        autocomplete="on"
        id="client-secret"
        maxlength="10000"
        value=""
      />
    </div>
    <table
      class="data-table undefined"
    >
      <thead>
        <tr
          class="data-table-headers"
        >
          <th
            class="data-table-header"
            scope="col"
          >
            <button
              aria-label="Unchecked checkbox"
              class="quill-checkbox unselected"
              type="button"
            />
          </th>
          <th
            class="data-table-header name"
            scope="col"
            style="width: 356px; min-width: 356px; text-align: left;"
          >
            Schools
          </th>
        </tr>
      </thead>
      <tbody
        class="data-table-body"
      >
        <tr
          class="data-table-row  "
        >
          <td>
            <button
              aria-label="Unchecked checkbox"
              class="quill-checkbox unselected data-table-row-section"
              type="button"
            />
          </td>
          <td
            class="data-table-row-section name"
            style="width: 356px; min-width: 356px; text-align: left;"
          >
            <span />
            MLK Middle School
          </td>
        </tr>
        <tr
          class="data-table-row  "
        >
          <td>
            <button
              aria-label="Unchecked checkbox"
              class="quill-checkbox unselected data-table-row-section"
              type="button"
            />
          </td>
          <td
            class="data-table-row-section name"
            style="width: 356px; min-width: 356px; text-align: left;"
          >
            <span />
            Toni Morrison High School
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="button-wrapper"
    >
      <span />
      <div>
        <button
          class="quill-button medium outlined secondary focus-on-light"
          type="button"
        >
          Cancel
        </button>
        <button
          class="quill-button medium primary contained focus-on-light disabled"
          disabled=""
          type="submit"
        >
          Submit
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
